Modifying z-index in canvas + position fixed

--- a/src/app/camera/camera.scss
+++ b/src/app/camera/camera.scss
@@ -27,10 +27,14 @@
     }
 
     #video, #canvas{
+      position: fixed;
       width: 100%; 
       height: 100%;
       object-fit: cover;
-      z-index: 0;
+    }
+
+    #canvas {
+      z-index: 1;
     }
     
   }
